--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -369,13 +369,23 @@
             <ul class="gfield_radio" id="input_bucld_sld">
               <li class="gchoice_bucld_sld_general reg-general-postdoc">
                 <label for="choice_bucld_sld_general" id="label_bucld_sld_general">
-                  <input name="input_sld" type="radio" id="choice_bucld_sld_general" value="General - $20.00" onclick="calculateTotal();" required />
-                  General - $20</label>
+                  <input name="input_sld" type="radio" id="choice_bucld_sld_general_nonsub" value="General (not LLD subscriber) - $60.00" onclick="calculateTotal();" required />
+                  General (not LLD subscriber) - $20</label>
+              </li>
+              <li class="gchoice_bucld_sld_general reg-general-postdoc">
+                <label for="choice_bucld_sld_general" id="label_bucld_sld_general_sub">
+                  <input name="input_sld" type="radio" id="choice_bucld_sld_general" value="General (LLD subscriber) - $25.00" onclick="calculateTotal();" required />
+                  General (LLD subscriber) - $25</label>
               </li>
               <li class="gchoice_bucld_sld_student reg-student">
-                <label for="choice_bucld_sld_student" id="label_bucld_sld_student">
-                  <input name="input_sld" type="radio" id="choice_bucld_sld_student" value="Student - $10.00" onclick="calculateTotal();" required />
-                  Student - $10</label>
+                <label for="choice_bucld_sld_student" id="label_bucld_sld_student_nonsub">
+                  <input name="input_sld" type="radio" id="choice_bucld_sld_student" value="Student (not LLD subscriber) - $25.00" onclick="calculateTotal();" required />
+                  Student (not LLD subscriber) - $25</label>
+              </li>
+              <li class="gchoice_bucld_sld_student reg-student">
+                <label for="choice_bucld_sld_student" id="label_bucld_sld_student_sub">
+                  <input name="input_sld" type="radio" id="choice_bucld_sld_student" value="Student (LLD subscriber) - $10.00" onclick="calculateTotal();" required />
+                  Student (LLD subscriber) - $10</label>
               </li>
               <li class="gchoice_bucld_sld_not_attending">
                 <label for="choice_bucld_sld_not_attending" id="label_bucld_sld_not_attending">
