Change language for no BUCLD option

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -230,7 +230,7 @@
                   <li class="gchoice_bucld_registration_not_attending_BUCLD">
                     <label for="choice_bucld_registration_not_attending_BUCLD" id="label_choice_bucld_registration_not_attending_BUCLD">
                       <input name="input_registration" type="radio" id="choice_bucld_registration_not_attending_BUCLD" value="No BUCLD conference registration - $0.00" onclick="calculateTotal();" class="watch-status reg-none" required />
-                      No registration for BUCLD conference (use if registering only for SLD and/or individual events)</label>
+                      Single BUCLD event, or SLD only with no BUCLD</label>
                   </li>
                 </ul>
               </div>
