Clarify options available to remote registrants

--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -23,7 +23,7 @@
 <!------------ END BLOCK: REG OPENING ------------>
 
 <div>
-  Registration rates for BUCLD 48 are the same for in-person and remote attendance. (Single-event rates are for in-person attendance only.) 
+  Registration rates for BUCLD 48 are the same for in-person and remote attendance. (One-day and single-event rates are for in-person attendance only.) 
   </div>
   
   <br>
@@ -40,13 +40,13 @@
      <li>postbacc trainee: $260</li>
      <li>student: $195</li>
   </ul>
-  3. <strong>ONE-DAY (available after 10/20)</strong>
+  3. <strong>ONE-DAY IN PERSON (available after 10/20)</strong>
   <ul>
      <li>general: $180</li>
      <li>postbacc trainee: $155</li>
      <li>student: $115</li>
   </ul>
-  4. <strong>SINGLE-EVENT (available after 10/20)</strong>
+  4. <strong>SINGLE-EVENT IN PERSON (available after 10/20)</strong>
   <ul>
      <li>general: $35</li>
      <li>postbacc trainee: $35</li>
