--- a/bucld-code-for-WP.html
+++ b/bucld-code-for-WP.html
@@ -18,10 +18,10 @@
 
 <!------------ BLOCK: REG OPENING ------------>
 <!------------ PUT <!-- JUST BELOW IF REG IS ALREADY OPEN ------------>
-<!--
-<p style="text-align: center;">Registration for BUCLD 48 will be opening soon.</p>
+<p style="text-align: center;">Registration for BUCLD 49 will be opening in late summer, 2024.</p>
 <!------------ END BLOCK: REG OPENING ------------>
-
+<!------------ PUT <!-- JUST BELOW IF REG IS NOT YET OPEN ------------>
+<!--
 <div>
   Registration rates for BUCLD 48 are the same for in-person and remote attendance. (One-day and single-event rates are for in-person attendance only.) 
   </div>
@@ -73,7 +73,7 @@
 
 <!------------ BLOCK: REG FORM HEADER ------------>
 <!------------ PUT <!-- JUST BELOW IF REGISTRATION IS NOT OPEN ------------>
-
+<!--
     <form method="post" enctype="multipart/form-data" id="gform_bucld" action="https://www.bu.edu/phpbin/marconi/index.php">
       <input name="form_id" type="hidden" value="bucld">
       <div class="gform_heading"></div>
@@ -166,9 +166,9 @@
   <!------------ END BLOCK: PRE-REG FIELDS ------------>
   
   <!------------ BLOCK: ON-SITE FIELDS ------------>
-  <!------------ IF PRE-REGISTRATION HAS NOT FINISHED ------------>
+  <!------------ IF PRE-REGISTRATION HAS NOT FINISHED OR IF REG IS NOT OPEN  ------------>
   <!------------ PUT <!-- JUST BELOW ------------>
-  
+  <!--
           <div id="onsite">
             <h4 class="gsection_title">Registration for BUCLD<span class="gfield_required">*</span></h4>
             <fieldset>
@@ -300,7 +300,7 @@
 <!------------ BLOCK: MAIN FORM BODY ------------>
 <!------------ IF REGISTRATION IS NOT YET OPEN ------------>
 <!------------ PUT <!-- JUST BELOW ------------>
-                      
+<!--
           <fieldset>
             <legend>How will you be attending the conference?</legend>
             <span class="gfield_description">
